--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "user-info-app",
   "version": "0.1.0",
-  "private": true,
-  
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,16 +11,16 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
+    "user-info-app": "^0.1.0",
     "web-vitals": "^2.1.4"
   },
-
   
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
+
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +43,4 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
-  
 }
-
